<resources>
    <string name="app_name">Market CM</string>
    <string name="pass_warn"><u>Password Warning</u></string>
    <string name="message_pass_warn">your password is less than 6 characters, for security reasons we recommend using a password containing eight or more characters!</string>
    <string name="comrade_market_your_products_easily_powered_by_shimita_douglas_gmail_com">comrades market your products so easily moulded by shimitadouglas@gmail.com</string>
    <string name="not_having_an_account_yet_click_here">registration of new account</string>
    <string name="drawerOpen">open</string>
    <string name="drawerClose">close</string>
    <string name="email_warn">please verify your email address to access more account privileges provided by the Market CM!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="any"></string>
    <string name="update_account">update account</string>
    <string name="ultimate_marketing">ultimate marketing platform for a comrade to post and advertise their products for sale online</string>
    <string name="vicinity">Vicinity: Maseno University</string>
    <string name="title">Accer Pro 2023</string>
    <string name="details">Details: 8Gb Ram,256GB SSD,Good Condition</string>
    <string name="category_laptops">Category: Laptops</string>
    <string name="productID">Product ID: GVSH67OBAU</string>
    <string name="enquire">Enquire @KES 40,000</string>
    <string name="message_title">message title</string>
    <string name="message">message</string>
    <string name="short_summary_text">short summary Text</string>
    <string name="message_console">message console</string>
    <string name="send_notification">send notification</string>
    <string name="notification_type">Notification type</string>
    <string name="title_normal_notification">title of the message</string>
    <string name="message_of_normal_notification">message of normal notification</string>
    <string name="type_normal_notification">type normal notification</string>
    <string name="title_big_notification">Title BigNotification</string>
    <string name="message_of_big_text_notification">message of big text notification</string>
    <string name="by_shimmita_douglas">by: shimmita douglas</string>
    <string name="big_notification_type">big notification type</string>
    <string name="notification">Administration</string>
    <string name="enquiry_notification">Enquiry Notification</string>
    <string name="product_enquired">product enquired</string>
    <string name="enquirer">Enquirer:</string>
    <string name="place">place:</string>
    <string name="phone">phone:0757450727</string>
    <string name="email">email:shimmitadouglas@gmail.com</string>
    <string name="hey_interested">hey iam interested to know more about this product.we can make things work-out concerning this product.contact via the information above.</string>
    <string name="owner_angel_michael">Owner: Angel Michael</string>
    <string name="date">Date:</string>
    <string name="promotional">Promotional</string>
    <string name="delete">Delete</string>
    <string name="home">home</string>
    <string name="post">post</string>
    <string name="alert_bottom_nav">alerts</string>
    <string name="logout">logout</string>
    <string name="my_product_title">my product title</string>
    <string name="date_posted">date posted</string>
    <string name="place_posted">place posted</string>
    <string name="category_product">category product</string>
    <string name="phone_number">phone number</string>
    <string name="update">update</string>
    <string name="delete_post">delete</string>
    <string name="product_description">product description</string>
    <string name="product_email">product email</string>
    <string name="my_posted_products">My Posted Products</string>
    <string name="product_id_stamp">productIDStamp</string>
    <string name="update_image">update image</string>
    <string name="enter_the_new_phone_number">enter new phone number</string>
    <string name="enter_new_place_where_the_product_is_located">enter place name</string>
    <string name="price_details">new price i.e (5,000)</string>
    <string name="type_here_to_search">search product here </string>
    <string name="file_size_description"></string>
    <string name="today">today</string>
    <string name="developer">Technical Assistance</string>
    <string name="message_developer">message developer</string>
    <string name="call_developer">call developer</string>
    <string name="email_developer">email developer</string>
    <string name="report">Report</string>
    <string name="report_a_scammer">report a scammer</string>
    <string name="about">About</string>
    <string name="market_cm">market cm</string>
    <string name="privacy_and_policy">privacy and policy</string>
    <string name="tools">Tools</string>
    <string name="share_app">share app</string>
    <string name="check_for_updates">check for updates</string>
    <string name="report_scanner_option">report scanner option</string>
    <string name="scammer_option"></string>
    <string name="write_your_message_here">why reporting this product</string>
    <string name="product_code">paste product code here</string>
    <string name="about_market">Market CM (comrade market) is a mobile trading application built to facilitate quick marketing of products for its members on a click of a button.\n\nTo use the application:\n\ni)members have to create a new account as required by the application during the registration process.\nii)members must verify their email address to own genuine accounts.\n\niii)members with genuine accounts gain the freedom of posting their products to the market for free.\n\niv)members with genuine accounts get notified whenever other user(s) enquires for their products hence can perform their business transactions in an easy-peasy way.\n\ndesigned and developed by:\n\nEmail:  shimitadouglas@gmail.com\n\nEmail:  douglasshimita3@gmail.com\n\nPhone: 0757450727\n\nStudent @Maseno University out 2024\nSchool Of Computing and Informatics
    </string>
    <string name="post_to_the_market">post to the market</string>
    <string name="counterfeit_claim">Counterfeit Claim</string>
    <string name="claimdate">ClaimDate:</string>
    <string name="productclaimid">ProductClaimID:</string>
    <string name="productcode">ProductCode:</string>
    <string name="productcontroluid">ProductControlUID:</string>
    <string name="productmessage">ProductMessage:</string>
    <string name="productvictimid">ProductVictimID:</string>
    <string name="productsuspectid">ProductSuspectID:</string>
    <string name="view_details">view Details</string>
    <string name="reports">reports</string>
    <string name="posts">posts</string>
    <string name="users">users</string>
    <string name="messageAdmin">message</string>
    <string name="counterfeit_product_details">Counterfeit Product Details</string>
    <string name="victim_of_counterfeit">Victim of Counterfeit</string>
    <string name="victim_username">victim username</string>
    <string name="suspect_of_counterfeit">suspect of counterfeit</string>
    <string name="alterations">alterations</string>
    <string name="isphonealtered">isPhoneAltered</string>
    <string name="isplacealtered">isPlaceAltered</string>
    <string name="phone_altered_from_to">phone altered from to</string>
    <string name="original_phone_new_phone">original phone ___ new phone ___</string>
    <string name="original_place_new_place">original place ___ new place ___</string>
    <string name="image_alterations">image alterations</string>
    <string name="original_image">original image</string>
    <string name="new_image">new image</string>
    <string name="isimagealtered">isImageAltered</string>
    <string name="shim">shim</string>
    <string-array name="report_scammer_options">
        <item>counterfeit products</item>
    </string-array>
    <string-array name="list_category_sort">
        <item>powerbanks</item>
        <item>laptop RAM</item>
        <item>smartPhones</item>
        <item>tablets and ipads</item>
        <item>hard disks and SSDs</item>
        <item>laptops and desktops</item>
        <item>tvs and flatscreens</item>
        <item>shoes,drips and dior</item>
        <item>earphones and headphones</item>
        <item>woofer,system and robot BT</item>
        <item>kaduda,kabambe and mulika mwizi</item>
        <item>flash drives,SD cards and memory cards</item>
    </string-array>
    <string-array name="listSortOptions">
        <item>university name</item>
        <item>product category</item>
        <item>time (latest first)</item>
        <item>time (old first)</item>
        <item>owners names(a-z)</item>
        <item>owners names(z-a)</item>
        <item>products names(a-z)</item>
        <item>products names(z-a)</item>

    </string-array>
    <string-array name="terms_and_conditions">
        <item>i agree terms and conditions</item>
        <item>i disagree terms and conditions</item>
    </string-array>
</resources>