<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/post"
        android:icon="@drawable/ic_add"
        android:title="@string/post"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/alert_bottom_nav"
        app:showAsAction="always" />

    <item
        android:id="@+id/adminShield"
        android:icon="@drawable/ic_shield_admin"
        android:title="@string/shim"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="always" />
</menu>