<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_margin="5dp"
    android:elevation="8dp"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/teko_bold"
            android:textColor="@color/accent_material_light"
            android:text="@string/counterfeit_claim"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvClaimDate"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/teko_light"
            android:text="@string/claimdate"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvProductClaimID"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/teko_light"
            android:text="@string/productclaimid"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvProductCode"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textIsSelectable="true"
            android:textColor="@color/black"
            android:fontFamily="@font/teko_light"
            android:text="@string/productcode"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvProductControlID"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/productcontroluid"
            android:textStyle="italic|bold" />


        <TextView
            android:id="@+id/tvProductVictimID"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/teko_light"
            android:text="@string/productvictimid"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/tvProductSuspectID"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/teko_light"
            android:text="@string/productsuspectid"
            android:textColor="@color/black"
            android:textStyle="italic|bold" />


        <TextView
            android:id="@+id/tvProductMessage"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/teko_light"
            android:text="@string/productmessage"
            android:textStyle="italic|bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnViewDetails"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_material_light"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/view_details"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>