<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#FBFBFB"
        app:cardCornerRadius="22dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/enquiry_notification"
                android:textColor="#A8914C"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/enquiredProductName"
                style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/product_enquired"
                android:textSize="12sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <ImageView
                android:id="@+id/imageProductEnquired"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@drawable/flash" />

            <TextView
                android:id="@+id/dateEnquired"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/date"
                android:typeface="normal" />

            <TextView
                android:id="@+id/enquirerName"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/enquirer"
                android:textStyle="italic"
                android:typeface="normal" />

            <TextView
                android:id="@+id/placeEnquirer"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/place"
                android:textStyle="italic"
                android:typeface="normal" />

            <TextView
                android:id="@+id/phoneEnquirer"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autoLink="phone|email"
                android:text="@string/phone"
                android:textStyle="italic"
                android:typeface="normal" />

            <TextView
                android:id="@+id/emailEnquirer"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autoLink="email|phone"
                android:text="@string/email"
                android:textStyle="italic"
                android:typeface="normal" />

            <TextView
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autoLink="email"
                android:text="@string/hey_interested"
                android:textStyle="italic"
                android:typeface="normal" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDeleteEnquiry"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:backgroundTint="@color/primary_material_light"
                android:gravity="center"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="#FF9800"
                android:textStyle="italic" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>