<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:elevation="5dp"
        app:cardBackgroundColor="@color/color_beautiful_one"
        app:cardCornerRadius="10dp"
        app:contentPadding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/myImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginBottom="5dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/myProductImage"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/lapsz" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/myProductTitle"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/rajdhani_bold"
                android:gravity="center"
                android:text="@string/my_product_title"
                android:textColor="@color/teal_700" />

            <TextView
                android:id="@+id/myProductDatePost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/material_15"
                android:fontFamily="@font/rajdhani_semi_bold"
                android:text="@string/date_posted"
                android:textColor="@color/dim_foreground_material_light" />

            <TextView
                android:id="@+id/myProductPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/material_15"
                android:fontFamily="@font/rajdhani_semi_bold"
                android:text="@string/place_posted"
                android:textColor="@color/dim_foreground_material_light" />

            <TextView
                android:id="@+id/myProductUniqueID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/material_15"
                android:fontFamily="@font/rajdhani_semi_bold"
                android:text="@string/product_id_stamp"
                android:textColor="@color/dim_foreground_material_light" />


            <TextView
                android:id="@+id/myProductCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/material_15"
                android:fontFamily="@font/rajdhani_semi_bold"
                android:text="@string/category_product"
                android:textColor="@color/dim_foreground_material_light" />

            <TextView
                android:id="@+id/myProductPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/material_15"
                android:fontFamily="@font/rajdhani_semi_bold"
                android:text="@string/phone_number"
                android:textColor="@color/dim_foreground_material_light" />

            <TextView
                android:id="@+id/myProductEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/material_15"
                android:fontFamily="@font/rajdhani_semi_bold"
                android:text="@string/product_email"
                android:textColor="@color/dim_foreground_material_light" />

            <TextView
                android:id="@+id/myProductDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/material_15"
                android:fontFamily="@font/rajdhani_semi_bold"
                android:text="@string/product_description"
                android:textColor="@color/dim_foreground_material_light" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdateMyProduct"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/colorWhite"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/beautiful_purple"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDeleteMyProduct"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/colorWhite"
                android:text="@string/delete_post"
                android:textAllCaps="false"
                android:textColor="#856155"
                android:visibility="gone" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>