<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:cardCornerRadius="30dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/notification" />


            <TextView
                android:id="@+id/titleNormalNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_normal_notification"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/messageNormalNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/message_of_normal_notification"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/typeNormalNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/type_normal_notification"
                android:textStyle="italic" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>