<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/material_seven"
        android:orientation="vertical">


        <CheckBox
            android:id="@+id/cbControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_console" />

        <LinearLayout
            android:id="@+id/linearController"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageViewNotification"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_users" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/material_one"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_type" />

                <Spinner
                    android:id="@+id/spinnerMessageType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/edtTitleMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/message_title" />

            <EditText
                android:id="@+id/edtMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/message" />

            <EditText
                android:id="@+id/edtSummaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/short_summary_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSendNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_notification" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBigNotifications"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/material_nine"
            android:padding="5dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNormalNotification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:padding="5dp">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>